tests/regression/errors/basic/undefined_var_10.csd
// Undefined variable test 10
vibez.spill("Using undefined:", undefined_var_10)
sus result drip = missing_variable + 10
